<resources>
    <string name="app_name">Calculator</string>

    <string name="Delete">-</string>

    <string name="Clear">C</string>
    <string name="Brackets">( )</string>
    <string name="Symbol">+/-</string>
    <string name="Divide">/</string>

    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Multiply">X</string>

    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="Minus">"-"</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="Plus">+</string>

    <string name="zero">0</string>
    <string name="dot">.</string>
    <string name="equal">=</string>
</resources>
